--- a/adventcalendar/calendarapp/templates/update_calendar_entry.html
+++ b/adventcalendar/calendarapp/templates/update_calendar_entry.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Create Calendar Entry</h1>
+  <h1>Edit Calendar Entry</h1>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">Save Changes</button>
   </form>
+  <a href="{% url 'calendar_entry_detail' entry.id %}">Back to Detail</a>
   <a href="{% url 'calendar_entry_list' %}">Back to List</a>
 {% endblock %}
