--- a/adventcalendar/calendarapp/static/base.css
+++ b/adventcalendar/calendarapp/static/base.css
@@ -1,8 +1,8 @@
 html{
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    background-color: white;
+    background-color: #F5F5F5;
 
 }
 
