--- a/adventcalendar/calendarapp/templates/base.html
+++ b/adventcalendar/calendarapp/templates/base.html
@@ -2,81 +2,237 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Web App{% endblock %}</title>
     {% load static %}
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    {% block styles %}
+
     <style>
-        header {
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            /* 글꼴 추가 */
+        }
+    
+        .top-page {
+            margin: 0 auto 25px auto;
+            height: 500px;
+            width: 100%;
+            background-color: #F5F5F5;
+            padding-top: 100px;
+        }
+    
+        .pink-header {
+            background-color: #2C2C2C;
+            height: 200px;
+            width: 100vw;
+            /* viewport의 전체 너비를 차지하도록 설정 */
+            max-width: 100%;
+            /* 최대 너비 제한 */
+            text-align: center;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
+            color: white;
+            font-size: 50px;
+            font-weight: bold;
+            box-sizing: border-box;
+        }
+    
+        .login-buttons {
+            text-align: center;
+            margin-top: 20px;
+        }
+    
+        .login-buttons a {
+            display: inline-block;
+        }
+    
+    
+        .github-button,
+        .google-button {
             padding: 10px 20px;
-            background-color: white;
+            margin: 0 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+    
+        .github-button {
+            background-color: #333;
+            color: #B0B0B0;
+        }
+    
+        .github-button:hover {
+            background-color: #4A4A4A;
+        }
+    
+        .google-button {
+            background-color: #4285F4;
             color: white;
         }
-
-        .inner {
+    
+        .google-button:hover {
+            background-color: #669CF6;
+        }
+    
+        .user-info {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 18px;
+            color: #2C2C2C;
+        }
+    
+        .user-info img {
+            vertical-align: middle;
+            margin-left: 10px;
+            border-radius: 20px;
+        }
+    
+    
+    
+    
+        .calendar-list {
+            background-color: #f9f9f9;
+            border: 1px solid #e0e0e0;
+            padding: 20px;
+            border-radius: 5px;
+            margin-top: 20px;
+            height: 1000px;
+        }
+    
+    
+    
+        .calendar-list h2 {
+            margin-top: 0;
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+    
+    
+    
+        }
+    
+        .calendar-list ul {
+            list-style-type: none;
+            /* 목록 앞에 불릿 제거 */
+            padding-left: 0;
+            /* 기본 패딩 제거 */
             display: flex;
-            align-items: center;
+            /* 아이템들을 가로로 배치 */
+            flex-wrap: wrap;
+            /* 줄바꿈 허용 */
+            gap: 20px;
+            /* 아이템 간의 간격 설정 */
+        }
+    
+        .calendar-list li {
+            background-color: #fff;
+            /* 흰색 배경 */
+            padding: 20px;
+            /* 내부 패딩 */
+            border: 1px solid #ddd;
+            /* 경계선 */
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+            /* 그림자 효과 */
+            border-radius: 5px;
+            /* 모서리 반올림 */
+            width: calc(33.33% - 20px);
+            /* 리스트 아이템 너비. 3개가 한 줄에 들어가도록 설정 */
+            box-sizing: border-box;
+            /* border와 padding을 포함한 너비 계산 */
+            transition: transform 0.2s;
+            /* 호버 애니메이션 */
+        }
+    
+    
+        .calendar-list a {
+            text-decoration: none;
+            color: #4285F4;
+            transition: color 0.3s;
+            display: block;
+        }
+    
+        .calendar-list li:hover {
+            transform: translateY(-10px);
+            /* 호버 시 아이템을 약간 위로 이동 */
+        }
+    
+        .add-calendar-btn {
+            padding: 10px 15px;
+            margin: 10px 0;
+            background-color: #2C2C2C;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            font-size: 16px;
+        }
+    
+        .add-calendar-btn:hover {
+            background-color: #4A4A4A;
+        }
+    
+        .calendar-item {
+            display: flex;
             justify-content: space-between;
-            width: 100%;
-            max-width: 1024px;
-            margin: 0 auto;
-
+            align-items: center;
         }
-
-        .logo {
-            margin-right: 20px;
+    
+        .calendar-buttons {
+            display: flex;
+            gap: 10px;
+            /* 버튼 사이의 간격 설정 */
         }
-
-        .hero {
-            background-image: url('{% static "3.png" %}');
-            background-position: right -120px top;
-            background-size: auto 200px;
-            height: 200px;
-            position: relative;
-            padding: 0 12px;
+    
+        .calendar-buttons a {
+            color: #4285F4;
+            /* 아이콘 색상 설정 */
+            font-size: 20px;
+            /* 아이콘 크기 설정 */
         }
-        body {
-        margin: 0;
-        padding: 0;
-    }
-
-
-        @media only screen and (max-width: 768px) {
-            header {
-                flex-direction: column;
-            }
+    
+        /* Edit 및 Delete 버튼 호버 스타일 (필요에 따라 추가 스타일을 지정할 수 있습니다) */
+        .calendar-buttons a:hover {
+            color: #357ABD;
         }
-
-
     </style>
+    {% endblock %}
 </head>
 
-<header>
-    <div class="inner">
-        <img src="{% static "logo.png" %}" alt="logo" width="220" height="28" class="logo"> <!-- 로고 이미지 크기 변경 -->
-        
-        <a href="/" style="text-align:right">메인페이지</a><br>
-    </div>
+<body>
 
-    {% if user.is_authenticated %}
-    <div>
-        현재 로그인 계정 : {{ user.username }}
-        {% if user.calendarentry.user_image %}
-        <img src="{{ entry.user_image.url }}" alt="{{ user.username }}" width="40"> <!-- 유저 이미지 크기 변경 -->
+    <div class="top-page">
+        <div class="pink-header">
+            Advent Calendar
+        </div>
+    
+        {% if user.is_authenticated %}
+        <div class="user-info">
+            현재 로그인 계정 : {{ user.username }}
+            {% if user.calendarentry.user_image %}
+            <img src="{{ user.calendarentry.user_image.url }}" alt="{{ user.username }}" width="40">
+            {% endif %}
+            <a href="{% url 'account_logout' %}"><button>로그아웃</button></a>
+        </div>
+        {% else %}
+        <div class="login-buttons">
+            <a href="/accounts/github/login/?process=login">
+                <button class="github-button">GitHub 로그인</button>
+            </a>
+            <a href="/accounts/google/login/?process=login">
+                <button class="google-button">Google 로그인</button>
+            </a>
+        </div>
         {% endif %}
     </div>
-    {% endif %}
-    </div>
-</header>
-
-<body>
-    <div class="hero">
-    
-    </div>
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    <!-- Page-specific content will be placed here -->
+    {% endblock %}
 </body>
 </html>
