--- a/adventcalendar/calendarapp/templates/calendar.html
+++ b/adventcalendar/calendarapp/templates/calendar.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+
+{% block content %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,8 +11,6 @@
     <link rel="stylesheet" href="{% static "main.css" %}">
 
 </head>
-
-
 
 <body>
     <!-- #region SampleRegion -->
@@ -246,3 +249,4 @@
     <p>
     </p>
 </body>
+{% endblock %}
