--- a/adventcalendar/calendarapp/templates/calendar_entry_list.html
+++ b/adventcalendar/calendarapp/templates/calendar_entry_list.html
@@ -12,5 +12,5 @@
       </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'create_calendar_entry' %}">Create New Entry</a>
+  <a href="{% url 'create_calendar_entry' calendar_id %}">Create New Entry</a>
 {% endblock %}
