--- a/adventcalendar/calendarapp/templates/calendar_entry_list.html
+++ b/adventcalendar/calendarapp/templates/calendar_entry_list.html
@@ -5,12 +5,13 @@
   <ul>
     {% for entry in entries %}
       <li>
-        <a href="{% url 'calendar_entry_detail' entry.id %}">Day {{ entry.day }} - {{ entry.username }}</a> 
+        <a href="{% url 'calendar_entry_detail' calendar_id entry.id %}">Day {{ entry.day }} - {{ entry.username }}</a>
         {% if entry.user == user %}
-          (<a href="{% url 'update_calendar_entry' entry.id %}">Edit</a> | <a href="{% url 'delete_calendar_entry' entry.id %}">Delete</a>)          
+          (<a href="{% url 'update_calendar_entry' calendar_id entry.id %}">Edit</a>
+          | <a href="{% url 'delete_calendar_entry' calendar_id entry.id %}">Delete</a>)          
         {% endif %}
       </li>
     {% endfor %}
   </ul>
-  <a href="{% url 'create_calendar_entry' calendar_id %}">Create New Entry</a>
+  <a href="{% url 'create_calendar_entry' calendar_id=calendar_id %}">Create New Entry</a>
 {% endblock %}
