--- a/adventcalendar/calendarapp/templates/create_calendar_entry.html
+++ b/adventcalendar/calendarapp/templates/create_calendar_entry.html
@@ -7,6 +7,7 @@
     {{ form.as_p }}
     <button type="submit">Create</button>
   </form>
-  <a href="{% url 'calendar_entry_list' %}">Back to List</a>
+  <a href="{% url 'calendar_entry_list' calendar_id %}">Back to List</a>
+
   
 {% endblock %}
