Revert "Calendar design fix"
This reverts commit 0faf50b216478f9ed46cb44fb99bc81ba96dff47.

--- a/adventcalendar/calendarapp/templates/delete_calendar_entry.html
+++ b/adventcalendar/calendarapp/templates/delete_calendar_entry.html
@@ -7,4 +7,5 @@
     {% csrf_token %}
     <button type="submit">Delete</button>
   </form>
+  <a href="{% url 'calendar_entry_list' %}">Cancel</a>
 {% endblock %}
