--- a/adventcalendar/calendarapp/static/main.css
+++ b/adventcalendar/calendarapp/static/main.css
@@ -1,33 +1,18 @@
-.calendar-list {
-  background-color: #f9f9f9;
-  border: 1px solid #e0e0e0;
-  padding: 20px;
-  border-radius: 5px;
-  margin-top: 20px;
-  height: 1000px;
-
-  
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  
-}
-
-.calendar-list h2 {
-  margin-top: 0;
-  border-bottom: 2px solid #333;
-  padding-bottom: 10px;
-  padding-top: 50px;
 
 
-}
-.modal-content{
+
+
+
+body {
+  font-size: medium;
+  background-color: #F5F5F5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  margin-top: 20px;
-  height: 1000px;
+  max-width: 960px;
+  margin: 0 auto;
+  overflow-x: hidden;
 }
 
 
@@ -66,10 +51,13 @@
 }
 
 .calendar-container {
-  display: inline-block;
+  display: flex;
   flex-direction: column;
+  /* 세로로 배치하기 위해 flex-direction을 column으로 변경 */
+  justify-content: center;
+  /* 항목들을 container의 맨 위로 이동 */
   width: 100%;
-
+  max-width: 800px;
   overflow: hidden;
 }
 
@@ -81,6 +69,17 @@
 
 
 
+.title {
+  justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #3f3f51;
+  height: 50px;
+  padding: 0px 0px 0px 0px;
+  margin: 20px;
+
+}
 
 
 
@@ -96,6 +95,11 @@
 
 }
 
+
+
+.day:hover .content {
+  display: flex;
+}
 
 .content .person-name {
   color: white;
@@ -232,67 +236,6 @@
   align-items: center;
   justify-content: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
