--- a/adventcalendar/calendarapp/templates/create_calendar_entry.html
+++ b/adventcalendar/calendarapp/templates/create_calendar_entry.html
@@ -6,5 +6,8 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Create</button>
-  </form>s
+  </form>
+  <a href="{% url 'calendar_entry_list' calendar_id %}">Back to List</a>
+
+  
 {% endblock %}
