--- a/adventcalendar/calendarapp/templates/base.html
+++ b/adventcalendar/calendarapp/templates/base.html
@@ -42,6 +42,7 @@
             font-size: 50px;
             font-weight: bold;
             box-sizing: border-box;
+            
         }
     
         .login-buttons {
@@ -208,9 +209,9 @@
 <body>
 
     <div class="top-page">
-        <div class="pink-header">
+        <a href="{% url 'home' %}" class="pink-header" style="text-decoration: none">
             Advent Calendar
-        </div>
+        </a>
     
         {% if user.is_authenticated %}
         <div class="user-info">
